docs: comprehensive Phase 1 OAUTHBEARER PoC documentation
- Rewrite 05-workload-identity.md with full PoC documentation:
  architecture, setup steps, configuration reference, all 7 pitfalls
  encountered and their fixes, known limitations, next steps
- Rewrite setup-oauthbearer-poc.sh with all fixes incorporated:
  correct container names, WI pod label patching, imagePullPolicy,
  auth secret update, scope in JAAS config, verification step
- Add phase0-recon.md to mkdocs nav